k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pub-site
  labels:
    name: pub-site
